Nav bar is cut off in Chrome mobile. Seeing if this'll fix things

--- a/controller/controller.css
+++ b/controller/controller.css
@@ -72,6 +72,7 @@ body, #app, .main {
   background-color: white;
   height: 10rem;
   margin-top: 5rem;
+  padding-bottom: 8rem;
   display: flex;
   justify-content: center;
   align-items: center;
